[gd_scene load_steps=7 format=3 uid="uid://dqgfpvlyf4ok2"]

[ext_resource type="Texture2D" uid="uid://dimpskamp5oxe" path="res://assets/shop_assets/Untitled13_20241024093603.png" id="1_7knp5"]
[ext_resource type="Script" path="res://scenes/scripts/my_shop.gd" id="1_dyt7v"]
[ext_resource type="Texture2D" uid="uid://top511dtaj62" path="res://assets/shop_assets/Untitled13_20241023154129.png" id="2_3f5cs"]
[ext_resource type="PackedScene" uid="uid://46twemes3e6e" path="res://scenes/player_interface.tscn" id="2_r1cgn"]
[ext_resource type="Texture2D" uid="uid://bfdx2rl2dvri5" path="res://assets/shop_assets/tam (1).png" id="3_80fjn"]
[ext_resource type="Texture2D" uid="uid://borueqisia0qr" path="res://assets/shop_assets/FREE.png" id="4_6mfcm"]

[node name="MyShop" type="Node2D"]
script = ExtResource("1_dyt7v")

[node name="PlayerInterface" parent="." instance=ExtResource("2_r1cgn")]
z_index = 3

[node name="Node2D" type="Node2D" parent="."]

[node name="MainTable" type="Sprite2D" parent="Node2D"]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
z_index = 2
texture_filter = 1
position = Vector2(960, 540)
texture = ExtResource("1_7knp5")

[node name="MainBG" type="Sprite2D" parent="Node2D/MainTable"]
z_index = -1
texture_filter = 1
texture = ExtResource("2_3f5cs")

[node name="Logo" type="Sprite2D" parent="Node2D/MainTable"]
texture_filter = 1
position = Vector2(756, -362)
scale = Vector2(0.55, 0.55)
texture = ExtResource("3_80fjn")

[node name="Poster1" type="Sprite2D" parent="Node2D/MainTable"]
texture_filter = 1
position = Vector2(354, -330)
rotation = -0.0261799
scale = Vector2(0.145279, 0.145279)
texture = ExtResource("4_6mfcm")

[node name="Spawn_time" type="Timer" parent="."]
wait_time = 6.0

[node name="items_forsale" type="Node2D" parent="."]

[node name="Button" type="Button" parent="items_forsale"]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="timeout" from="Spawn_time" to="." method="_on_spawn_time_timeout"]
